AG-10044 - Fix RHS nav vertical alignment issue

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SideNavigation.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SideNavigation.module.scss
@@ -31,7 +31,7 @@
 
     > div {
         @supports (position: sticky) {
-            padding-top: $spacing-size-6;
+            padding-top: $spacing-size-8;
             padding-bottom: $spacing-size-16;
             position: sticky;
             top: var(--layout-site-header-height);
